--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -11,19 +11,19 @@
 <body>
     <header>
         <nav role="navigation">
-            <h1>Signothèque</h1>
+            <h1 class="logo-text"><a href="index.html" class="logo-text-link">Signothèque</a></h1>
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Accueil</a>
+                    <a class="nav-link btn-con" href="index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
+                    <a class="nav-link active btn-con" href="qui-sommes-nous.html">Qui sommes-nous ?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="participer.html">Participer</a>
+                    <a class="nav-link btn-con" href="participer.html">Participer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ressources.html">Ressources</a>
+                    <a class="nav-link btn-con" href="ressources.html">Ressources</a>
                 </li>
             </ul>
         </nav>
